New entries should be added at the top

==============================================================
2004-10-28 backend_cairo.py: The renderer is complete except for mathtext,
           draw_image() and clipping. gtkcairo works reasonably well. cairo
           does not yet create any files since I can't figure how to set the
           'target surface', I don't think pycairo wraps the required functions
	   - SC

2004-10-28 backend_gtk.py: Improved the save dialog (GTK 2.4 only) so it 
           presents the user with a menu of supported image formats - SC

2004-10-28 backend_svg.py: change print_figure() to restore original face/edge 
           color
           backend_ps.py : change print_figure() to ensure original face/edge 
           colors are restored even if there's an IOError - SC

2004-10-27 Applied Norbert's errorbar patch to support barsabove kwarg

2004-10-27 Applied Norbert's legend patch to support None handles

2004-10-27 Added two more backends: backend_cairo.py, backend_gtkcairo.py
           They are not complete yet, currently backend_gtkcairo just renders 
           polygons, rectangles and lines - SC

2004-10-21 Added polar axes and plots - JDH

2004-10-20 Fixed corrcoef bug exposed by corrcoef(X) where X is matrix
           - JDH

2004-10-19 Added kwarg support to xticks and yticks to set ticklabel
           text properties -- thanks to T. Edward Whalen for the suggestion

2004-10-19 Added support for PIL images in imshow(), image.py - ADS

2004-10-19 Re-worked exception handling in _image.py and _transforms.py
           to avoid masking problems with shared libraries.  - JTM

2004-10-16 Streamlined the matlab interface wrapper, removed the
           noplot option to hist - just use mlab.hist instead.

2004-09-30 Added Andrew Dalke's strftime code to extend the range of
           dates supported by the DateFormatter - JDH

2004-09-30 Added barh - JDH

2004-09-30 Removed fallback to alternate array package from numerix